added reset button

--- a/graph/index.html
+++ b/graph/index.html
@@ -10,4 +10,7 @@
 
 <body>
     <div id="thegraph"></div>
+    <div id="centerdiv">
+            <a id="reset-button" class="gradient-button gradient-button-1">Återställ vyn</a><br />
+    </div>
 </body>
