--- a/graph/index.html
+++ b/graph/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html lang="sv">
+<!DOCTYPE html >
 <head>
     <meta charset="UTF-8">
     <script src="https://unpkg.com/vis-network@latest/dist/vis-network.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/vis-network@latest/dist/vis-network.min.css">
     <link rel="stylesheet" href="style.css">
-
+    <title>Simon & Josefin gifter sig!</title>
     <script src="./script.js"></script>
 </head>
-
+<html lang="sv">
 <body>
     <div id="thegraph"></div>
     <div id="centerdiv">
             <a id="reset-button" class="gradient-button gradient-button-1">Återställ vyn</a><br />
     </div>
 </body>
+</html>
